--- a/angular.json
+++ b/angular.json
@@ -105,6 +105,37 @@
           }
         }
       }
+    },
+    "glcp-ng-swiperjs": {
+      "projectType": "library",
+      "root": "projects/glcp-ng-swiperjs",
+      "sourceRoot": "projects/glcp-ng-swiperjs/src",
+      "prefix": "ngsw",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/glcp-ng-swiperjs/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/glcp-ng-swiperjs/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/glcp-ng-swiperjs/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/glcp-ng-swiperjs/src/test.ts",
+            "tsConfig": "projects/glcp-ng-swiperjs/tsconfig.spec.json",
+            "karmaConfig": "projects/glcp-ng-swiperjs/karma.conf.js"
+          }
+        }
+      }
     }
   },
   "defaultProject": "angular-swiperjs"
