--- a/angular.json
+++ b/angular.json
@@ -106,23 +106,23 @@
         }
       }
     },
-    "glcp-ng-swiperjs": {
+    "glcp-ng-swiper": {
       "projectType": "library",
-      "root": "projects/glcp-ng-swiperjs",
-      "sourceRoot": "projects/glcp-ng-swiperjs/src",
+      "root": "projects/glcp-ng-swiper",
+      "sourceRoot": "projects/glcp-ng-swiper/src",
       "prefix": "ngsw",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "project": "projects/glcp-ng-swiperjs/ng-package.json"
+            "project": "projects/glcp-ng-swiper/ng-package.json"
           },
           "configurations": {
             "production": {
-              "tsConfig": "projects/glcp-ng-swiperjs/tsconfig.lib.prod.json"
+              "tsConfig": "projects/glcp-ng-swiper/tsconfig.lib.prod.json"
             },
             "development": {
-              "tsConfig": "projects/glcp-ng-swiperjs/tsconfig.lib.json"
+              "tsConfig": "projects/glcp-ng-swiper/tsconfig.lib.json"
             }
           },
           "defaultConfiguration": "production"
@@ -130,9 +130,9 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/glcp-ng-swiperjs/src/test.ts",
-            "tsConfig": "projects/glcp-ng-swiperjs/tsconfig.spec.json",
-            "karmaConfig": "projects/glcp-ng-swiperjs/karma.conf.js"
+            "main": "projects/glcp-ng-swiper/src/test.ts",
+            "tsConfig": "projects/glcp-ng-swiper/tsconfig.spec.json",
+            "karmaConfig": "projects/glcp-ng-swiper/karma.conf.js"
           }
         }
       }
