--- a/projects/glcp-ng-swiper/package.json
+++ b/projects/glcp-ng-swiper/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "glcp-ng-swiperjs",
+  "name": "glcp-ng-swiper",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^12.2.0",
